--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: PSCBS
 Title: Analysis of Parent-Specific DNA Copy Numbers
-Version: 0.11.0
-Date: 2011-06-14
-Author: A.B. Olshen, H. Bengtsson, P. Neuvial, P. Spellman, R.A.
+Version: 0.11.3
+Date: 2011-07-06
+Author: A.B. Olshen, H. Bengtsson, P. Neuvial, P.T. Spellman, R.A.
         Olshen, V.E. Seshan
 Description: Segments allele-specific DNA copy number data to detect
         regions with abnormal copy number within each parental
@@ -16,8 +16,6 @@ License: GPL (>= 2)
 LazyLoad: yes
 biocViews: aCGH, CopyNumberVariants, SNP, Microarray, OneChannel,
         TwoChannel, Genetics
+Packaged: 2011-07-07 00:16:26 UTC; hb
 Repository: CRAN
-Repository/R-Forge/Project: abo
-Repository/R-Forge/Revision: 133
-Date/Publication: 2011-06-17 18:22:28
-Packaged: 2011-06-15 20:50:04 UTC; rforge
+Date/Publication: 2011-07-07 08:07:28
