--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: PSCBS
 Title: Analysis of Parent-Specific DNA Copy Numbers
-Version: 0.12.1
-Date: 2011-08-08
+Version: 0.12.2
+Date: 2011-08-27
 Author: A.B. Olshen, H. Bengtsson, P. Neuvial, P.T. Spellman, R.A.
         Olshen, V.E. Seshan
 Description: Segments allele-specific DNA copy number data to detect
@@ -11,11 +11,13 @@ Maintainer: Henrik Bengtsson <henrikb@braju.com>
 Depends: R.methodsS3 (>= 1.2.1), R.utils (>= 1.7.8)
 Imports: DNAcopy (>= 1.24.0)
 Suggests: DNAcopy (>= 1.24.0), aroma.light (>= 1.20.0), matrixStats (>=
-        0.2.2), R.oo (>= 1.8.0), Hmisc (>= 3.8-3)
+        0.2.2), R.oo (>= 1.8.1), Hmisc (>= 3.8-3)
 License: GPL (>= 2)
 LazyLoad: yes
 biocViews: aCGH, CopyNumberVariants, SNP, Microarray, OneChannel,
         TwoChannel, Genetics
-Packaged: 2011-08-07 23:34:05 UTC; hb
 Repository: CRAN
-Date/Publication: 2011-08-08 05:41:26
+Repository/R-Forge/Project: abo
+Repository/R-Forge/Revision: 157
+Date/Publication: 2011-09-02 04:53:18
+Packaged: 2011-08-30 20:40:34 UTC; rforge
