--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,22 +1,23 @@
 Package: PSCBS
 Title: Analysis of Parent-Specific DNA Copy Numbers
-Version: 0.23.0
-Date: 2012-03-20
+Version: 0.28.1
+Date: 2012-08-15
 Author: A.B. Olshen, H. Bengtsson, P. Neuvial, P.T. Spellman, R.A.
         Olshen, V.E. Seshan
 Description: Segments allele-specific DNA copy number data to detect
         regions with abnormal copy number within each parental
         chromosome
 Maintainer: Henrik Bengtsson <henrikb@braju.com>
-Depends: R.methodsS3 (>= 1.2.2), R.oo (>= 1.9.3), R.utils (>= 1.12.0)
-Imports: DNAcopy (>= 1.24.0), utils, R.rsp (>= 0.7.5)
-Suggests: DNAcopy (>= 1.24.0), aroma.light (>= 1.22.0), matrixStats (>=
-        0.4.4), R.oo (>= 1.9.3), R.cache (>= 0.6.1), digest (>= 0.5.1),
-        Hmisc (>= 3.8-3), ggplot2 (>= 0.8.9)
+Depends: R.methodsS3 (>= 1.4.2), R.oo (>= 1.9.8), R.utils (>= 1.12.1)
+Imports: utils, R.methodsS3 (>= 1.4.2), R.oo (>= 1.9.8), DNAcopy (>=
+        1.27.2), R.rsp (>= 0.8.2)
+Suggests: DNAcopy (>= 1.27.2), aroma.light (>= 1.22.0), matrixStats (>=
+        0.5.2), R.cache (>= 0.6.2), digest (>= 0.5.2), Hmisc (>=
+        3.9-3), ggplot2 (>= 0.9.1)
 License: GPL (>= 2)
 LazyLoad: yes
 biocViews: aCGH, CopyNumberVariants, SNP, Microarray, OneChannel,
         TwoChannel, Genetics
-Packaged: 2012-03-20 22:35:05 UTC; hb
+Packaged: 2012-08-19 03:37:01 UTC; hb
 Repository: CRAN
-Date/Publication: 2012-03-21 07:59:23
+Date/Publication: 2012-08-19 05:30:15
