--- a/NAMESPACE
+++ b/NAMESPACE
@@ -49,6 +49,7 @@ importFrom("R.cache", "saveCache")
 importFrom("DNAcopy", "segments.summary")
 
 importFrom("R.utils", "cat") ## Multi-sources: R.utils, base
+importFrom("R.utils", "capitalize")
 importFrom("R.utils", "copyDirectory")
 importFrom("R.utils", "createLink")
 importFrom("R.utils", "enter")
@@ -83,9 +84,6 @@ importFrom("DNAcopy", "CNA")
 importFrom("DNAcopy", "segment")
 importFrom("DNAcopy", "getbdry")
 importFrom("R.utils", "subplots")
-if (packageVersion("R.utils") < "1.27.5") {
-  importFrom("R.utils", "cat.default")
-}
 
 
 # - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
@@ -111,6 +109,7 @@ S3method("adjustPloidyScale", "AbstractCBS")
 S3method("all.equal", "AbstractCBS")
 S3method("append", "AbstractCBS")
 S3method("as.data.frame", "AbstractCBS")
+S3method("clearCalls", "AbstractCBS")
 S3method("drawChangePoints", "AbstractCBS")
 S3method("drawKnownSegments", "AbstractCBS")
 S3method("dropChangePoint", "AbstractCBS")
@@ -120,8 +119,11 @@ S3method("dropRegions", "AbstractCBS")
 S3method("extractChromosome", "AbstractCBS")
 S3method("extractChromosomes", "AbstractCBS")
 S3method("extractCNs", "AbstractCBS")
+S3method("extractRegion", "AbstractCBS")
 S3method("extractRegions", "AbstractCBS")
+S3method("extractSegment", "AbstractCBS")
 S3method("extractSegments", "AbstractCBS")
+S3method("getChangePoints", "AbstractCBS")
 S3method("getChromosomeOffsets", "AbstractCBS")
 S3method("getChromosomeRanges", "AbstractCBS")
 S3method("getChromosomes", "AbstractCBS")
@@ -132,6 +134,7 @@ S3method("getSampleName", "AbstractCBS")
 S3method("getSegments", "AbstractCBS")
 S3method("getSegmentSizes", "AbstractCBS")
 S3method("getSegmentTrackPrefixes", "AbstractCBS")
+S3method("hclustCNs", "AbstractCBS")
 S3method("load", "AbstractCBS")
 S3method("mergeThreeSegments", "AbstractCBS")
 S3method("mergeTwoSegments", "AbstractCBS")
@@ -162,6 +165,7 @@ S3method("setSegments", "AbstractCBS")
 S3method("shiftTCN", "AbstractCBS")
 S3method("tileChromosomes", "AbstractCBS")
 S3method("updateMeans", "AbstractCBS")
+S3method("updateMeansTogether", "AbstractCBS")
 
 # CBS
 S3method("all.equal", "CBS")
@@ -169,17 +173,24 @@ S3method("append", "CBS")
 S3method("as.character", "CBS")
 S3method("as.data.frame", "CBS")
 S3method("as.DNAcopy", "CBS")
+S3method("callAmplifications", "CBS")
 S3method("callArms", "CBS")
+S3method("callGainsAndLosses", "CBS")
+S3method("callOutliers", "CBS")
 S3method("drawCentromeres", "CBS")
 S3method("drawChromosomes", "CBS")
 S3method("drawLevels", "CBS")
+S3method("estimateDeltaCN", "CBS")
 S3method("estimateStandardDeviation", "CBS")
+S3method("extractCallsByLocus", "CBS")
 S3method("extractChromosomes", "CBS")
 S3method("extractCNs", "CBS")
+S3method("extractSegmentMeansByLocus", "CBS")
 S3method("extractSegments", "CBS")
 S3method("extractTotalCNs", "CBS")
 S3method("getCallStatistics", "CBS")
 S3method("getCallStatisticsByArms", "CBS")
+S3method("getChangePoints", "CBS")
 S3method("getChromosomeRanges", "CBS")
 S3method("getFGA", "CBS")
 S3method("getFGG", "CBS")
@@ -187,7 +198,9 @@ S3method("getFGL", "CBS")
 S3method("getFractionOfGenomeAltered", "CBS")
 S3method("getFractionOfGenomeGained", "CBS")
 S3method("getFractionOfGenomeLost", "CBS")
+S3method("getLocusData", "CBS")
 S3method("getLocusSignalNames", "CBS")
+S3method("getSegments", "CBS")
 S3method("getSegmentTrackPrefixes", "CBS")
 S3method("getSignalType", "CBS")
 S3method("getSmoothLocusData", "CBS")
@@ -197,6 +210,7 @@ S3method("highlightLocusCalls", "CBS")
 S3method("isSegmentSplitter", "CBS")
 S3method("isWholeChromosomeGained", "CBS")
 S3method("isWholeChromosomeLost", "CBS")
+S3method("joinSegments", "CBS")
 S3method("mergeNonCalledSegments", "CBS")
 S3method("mergeTwoSegments", "CBS")
 S3method("nbrOfAmplifications", "CBS")
@@ -204,15 +218,19 @@ S3method("nbrOfGains", "CBS")
 S3method("nbrOfLosses", "CBS")
 S3method("plot", "CBS")
 S3method("plotTracks", "CBS")
+S3method("plotTracksManyChromosomes", "CBS")
 S3method("pruneBySdUndo", "CBS")
 S3method("resegment", "CBS")
 S3method("segmentByCBS", "CBS")
 S3method("seqOfSegmentsByDP", "CBS")
 S3method("shiftTCN", "CBS")
 S3method("signalType", "CBS")
+S3method("signalType<-", "CBS")
+S3method("subset", "CBS")
 S3method("tileChromosomes", "CBS")
 S3method("updateBoundaries", "CBS")
 S3method("updateMeans", "CBS")
+S3method("updateMeansTogether", "CBS")
 S3method("writeLocusData", "CBS")
 S3method("writeSegments", "CBS")
 
@@ -229,6 +247,7 @@ S3method("segmentByNonPairedPSCBS", "data.frame")
 S3method("segmentByPairedPSCBS", "data.frame")
 
 # default
+S3method("append", "default")
 S3method("callAllelicBalance", "default")
 S3method("callSegmentationOutliers", "default")
 S3method("dropSegmentationOutliers", "default")
@@ -245,6 +264,7 @@ S3method("weightedQuantile", "default")
 S3method("as.CBS", "DNAcopy")
 S3method("drawLevels", "DNAcopy")
 S3method("estimateStandardDeviation", "DNAcopy")
+S3method("extractSegmentMeansByLocus", "DNAcopy")
 S3method("getChromosomes", "DNAcopy")
 S3method("getSampleNames", "DNAcopy")
 S3method("nbrOfLoci", "DNAcopy")
@@ -256,59 +276,104 @@ S3method("writeSegments", "DNAcopy")
 S3method("seqOfSegmentsByDP", "matrix")
 
 # NonPairedPSCBS
+S3method("callROH", "NonPairedPSCBS")
 S3method("getLocusData", "NonPairedPSCBS")
 S3method("resegment", "NonPairedPSCBS")
+S3method("updateMeans", "NonPairedPSCBS")
 
 # numeric
 S3method("testROH", "numeric")
 
 # PairedPSCBS
 S3method("adjustPloidyScale", "PairedPSCBS")
+S3method("applyByRegion", "PairedPSCBS")
+S3method("arrowsC1C2", "PairedPSCBS")
+S3method("arrowsDeltaC1C2", "PairedPSCBS")
+S3method("bootstrapCIs", "PairedPSCBS")
 S3method("bootstrapDHByRegion", "PairedPSCBS")
+S3method("bootstrapSegmentsAndChangepoints", "PairedPSCBS")
+S3method("bootstrapTCNandDHByRegion", "PairedPSCBS")
 S3method("calcStatsForCopyNeutralABs", "PairedPSCBS")
 S3method("callAB", "PairedPSCBS")
+S3method("callABandHighAI", "PairedPSCBS")
+S3method("callABandLowC1", "PairedPSCBS")
 S3method("callAllelicBalanceByDH", "PairedPSCBS")
 S3method("callCopyNeutral", "PairedPSCBS")
 S3method("callCopyNeutralByTCNofAB", "PairedPSCBS")
+S3method("callExtremeAllelicImbalanceByDH", "PairedPSCBS")
 S3method("callGainNeutralLoss", "PairedPSCBS")
 S3method("callGNL", "PairedPSCBS")
 S3method("callGNLByTCNofAB", "PairedPSCBS")
 S3method("callGNLByTCNofABv1", "PairedPSCBS")
 S3method("callLOH", "PairedPSCBS")
+S3method("callLowC1ByC1", "PairedPSCBS")
 S3method("callNTCN", "PairedPSCBS")
 S3method("callROH", "PairedPSCBS")
+S3method("callROHOneSegment", "PairedPSCBS")
+S3method("clearBootstrapSummaries", "PairedPSCBS")
+S3method("drawChangePointsC1C2", "PairedPSCBS")
+S3method("drawConfidenceBands", "PairedPSCBS")
+S3method("drawLevels", "PairedPSCBS")
 S3method("estimateDeltaAB", "PairedPSCBS")
 S3method("estimateDeltaABBySmallDH", "PairedPSCBS")
 S3method("estimateDeltaCN", "PairedPSCBS")
 S3method("estimateDeltaLOH", "PairedPSCBS")
+S3method("estimateDeltaLOHByMinC1ForNonAB", "PairedPSCBS")
+S3method("estimateHighDHQuantileAtAB", "PairedPSCBS")
 S3method("estimateKappa", "PairedPSCBS")
 S3method("estimateKappaByC1Density", "PairedPSCBS")
+S3method("estimateMeanForDH", "PairedPSCBS")
+S3method("estimateStdDevForHeterozygousBAF", "PairedPSCBS")
 S3method("extractC1C2", "PairedPSCBS")
+S3method("extractCallsByLocus", "PairedPSCBS")
 S3method("extractCNs", "PairedPSCBS")
 S3method("extractDeltaC1C2", "PairedPSCBS")
 S3method("extractDhSegment", "PairedPSCBS")
+S3method("extractLocusLevelC1C2", "PairedPSCBS")
+S3method("extractLocusLevelTCN", "PairedPSCBS")
 S3method("extractMinorMajorCNs", "PairedPSCBS")
+S3method("extractSegmentDataByLocus", "PairedPSCBS")
 S3method("extractSegments", "PairedPSCBS")
 S3method("extractTCNAndDHs", "PairedPSCBS")
+S3method("findBootstrapSummaries", "PairedPSCBS")
+S3method("getBootstrapLocusSets", "PairedPSCBS")
 S3method("getChromosomeOffsets", "PairedPSCBS")
 S3method("getChromosomeRanges", "PairedPSCBS")
 S3method("getLocusData", "PairedPSCBS")
+S3method("hasBootstrapSummaries", "PairedPSCBS")
+S3method("linesC1C2", "PairedPSCBS")
+S3method("linesDeltaC1C2", "PairedPSCBS")
+S3method("mergeTwoSegments", "PairedPSCBS")
+S3method("plot", "PairedPSCBS")
+S3method("plotC1C2", "PairedPSCBS")
+S3method("plotDeltaC1C2", "PairedPSCBS")
 S3method("plotTracks", "PairedPSCBS")
+S3method("plotTracks1", "PairedPSCBS")
 S3method("plotTracks2", "PairedPSCBS")
+S3method("plotTracksManyChromosomes", "PairedPSCBS")
+S3method("pointsC1C2", "PairedPSCBS")
+S3method("pointsDeltaC1C2", "PairedPSCBS")
 S3method("postsegmentTCN", "PairedPSCBS")
 S3method("resegment", "PairedPSCBS")
 S3method("segmentByNonPairedPSCBS", "PairedPSCBS")
 S3method("segmentByPairedPSCBS", "PairedPSCBS")
 S3method("seqOfSegmentsByDP", "PairedPSCBS")
 S3method("shiftTCN", "PairedPSCBS")
+S3method("tileChromosomes", "PairedPSCBS")
+S3method("updateMeans", "PairedPSCBS")
+S3method("updateMeansC1C2", "PairedPSCBS")
+S3method("updateMeansTogether", "PairedPSCBS")
 
 # PSCBS
 S3method("append", "PSCBS")
 S3method("as.data.frame", "PSCBS")
 S3method("drawChangePoints", "PSCBS")
 S3method("extractChromosomes", "PSCBS")
+S3method("getChangePoints", "PSCBS")
 S3method("getLocusData", "PSCBS")
 S3method("getLocusSignalNames", "PSCBS")
+S3method("getSegments", "PSCBS")
 S3method("getSegmentTrackPrefixes", "PSCBS")
 S3method("isSegmentSplitter", "PSCBS")
 S3method("writeSegments", "PSCBS")
+
